<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pic\'Search</string>
    <string name="titre"><h1><b>Pic\'Search</b></h1></string>
    <string name="presentation_appli"><b>Pic\'Search</b> est une application vous permettant de 
        rechercher des images sur le net&#8230;</string>
    <string name="commencer">Commencer</string>
    <string name="valider">Valider</string>
    <string name="recherche">Rechercher une image..</string>
    <string name="presentation">Pic\'Search</string>
    
    <string name="retour">Retour</string>

    <string-array name="spinner">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    
    <string-array name="spinnerChoix">
        <item value="1">Définir en tant que fond d\'écran</item>
        <item value="2">Accéder au site internet de l\'image</item>
        <item value="3">Se téléporter au KFC le plus proche</item>
    </string-array>

    <string name="title_activity_vue_photo">VuePhoto</string>
    <string name="hello_world">Hello world!</string>

</resources>
